// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton> that renders a radio button should render default radio button correctly 1`] = `
<div>
  <div>
    <input
      class="RadioButton__input"
      id="c1"
      type="radio"
    />
    <label
      class="RadioButton__label"
      for="c1"
    >
      <span
        class="RadioButton__box"
      />
    </label>
  </div>
</div>
`;

exports[`<RadioButton> that renders a radio button should render radio button with props and children correctly 1`] = `
<div>
  <div>
    <input
      class="RadioButton__input"
      id="c1"
      name="group_name"
      type="radio"
    />
    <label
      class="RadioButton__label"
      for="c1"
    >
      <span
        class="RadioButton__box"
      />
      <span
        class="Text--size_medium RadioButton__text"
      >
        Choose me
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioButton> that renders a radio button should rendered disabled radio button correctly 1`] = `
<div>
  <div
    class="RadioButton--disabled"
  >
    <input
      class="RadioButton__input"
      disabled=""
      id="c3"
      type="radio"
    />
    <label
      class="RadioButton__label"
      for="c3"
    >
      <span
        class="RadioButton__box"
      />
      <span
        class="Text--context_neutral Text--size_medium RadioButton__text"
      >
        Useless radio button
      </span>
    </label>
  </div>
</div>
`;
